1.1.1
------------------------------------------------------------------------------------------------------------------------

GUI:
	- Fixed: jQuery library included twice in the simple layout

PLUGINS:
	- Changed: The iMSCP_Plugin_Manager::updatePluginInfo() method is now public
	- Updated: Plugin API to version 0.2.5 (changes are backward compatible)

Tickets:
	- Fixed #1014: Bug - Link for "cancel" in Reseller - edit Domain is wrong

------------------------------------------------------------------------------------------------------------------------
1.1.0
------------------------------------------------------------------------------------------------------------------------

2014-02-03: Laurent Declercq
	- RELEASE i-MSCP 1.1.0

ADDONS:
	- Added: Awstats - logresolvemerge.pl script for last rotated log processing
	- Fixed: Awstats - _addAwstatsSection() event listener is registered too many times
	- Fixed: Awstats - Avoid concurrent processes of the awstats_updateall.pl script
	- Fixed: Awstats - Error: Couldn't open server log file... (missing files are now ignored silently)
	- Fixed: Awstats - Traffic data are lost when logs are rotated
	- Fixed: Roundcube|PhpMyAdmin installers - Ensure that database tables exist (recovery case)
	- Fixed: Roundcube - Wrong SQL server host when using remote server
	- Fixed: PhpMyAdmin 4.1.0 is only compatible with MySQL Server version 5.5 and newer
	- Removed: Awstats - logrotate entry (no longer needed)

CONFIG:
	- Changed: Tools access is now provided only through the panel domain
	- Disabled: PHP opcache module for master (needed for some tools which are not compatible with this module)
	- Removed: Useless wget-hack prevention which doesn't prevent nothing in reality
	- Removed: mod_fastcgi support (FastCGI is now provided through mod_fcgid only)
	- Removed: Useless logs directory from both subdomain and alias Web folder skeletons
	- Updated: Apache2 logrotate configuration file (logs are now rotated daily)